<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >"PCRemote"
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="hello_world" >Hello world!

        <!-- menu glowne -->
    </string>
     <string name="menu_pilot_ico" >remote
    </string>
    <string name="menu_keyboard_ico" >keyboard
    </string>
    <string name="menu_mouse_ico" >mouse
    </string>
    <string name="menu_changePC" >change PC
    </string>
    <string name="menu_screensaver" >screensaver
    </string>
    <string name="menu_theme" >theme
    </string>
    <string name="menu_info" >info
    </string>

    <!-- podmenu ChangePC -->

    <string name="menu_changePC_serch" >serch
    </string>
    <string name="menu_changePC_write" >write
    </string>
    <string name="menu_changePC_Qr" >QR
    </string>

    <string name="menu_changePC_write_name" >"PC's Name/IP"
    </string>
    <string name="menu_changePC_write_pass" >code
    </string>

    <string name="menu_changePC_write_connect" >connect
    </string>


    <!-- podmenu wygaszacz -->

    <string name="menu_screensaver_off" >" turn off screen"
    </string>
    <string name="menu_screensaver_dim" >" dim screen"
    </string>
    <string name="menu_screensaver_on" >" screen always on"
    </string>

    <!-- podmenu motyw -->

    <string name="menu_theme_dark" >" Dark theme"
    </string>
    <string name="menu_theme_bright" >" Bright theme"
    </string>

    <!-- podmenu informacje -->

     <string name="menu_info_connection" >CONNECTION
    </string>
     <string name="menu_info_state" >-State:
    </string>
     <string name="menu_info_quality" >-Quality: n/o
    </string>
     <string name="menu_info_host" >-Host:
    </string>
     <string name="menu_info_state_connected" >" connected"
    </string>
     <string name="menu_info_state_disconnected" >" disconnected"
    </string>



</resources>
