<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingBottom="5dp"
              android:background="#555555">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/menu_info_connection"
            android:id="@+id/textView7"
            android:textColor="@color/infoAuthorTxT" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/menu_info_state"
                android:id="@+id/textView8"
                android:textColor="@color/infoAuthorTxT" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/menu_info_state_disconnected"
                android:id="@+id/stanPolaczenia"
                android:textColor="#ff0015" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/menu_info_quality"
            android:id="@+id/jakoscTxt"
            android:textColor="@color/infoAuthorTxT" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/menu_info_host"
                android:id="@+id/textView6"
                android:textColor="@color/infoAuthorTxT" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="b/d"
                android:id="@+id/hostTxt"
                android:textColor="@color/infoAuthorTxT" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:id="@+id/imageView"
            android:background="@color/infoAuthorTxT"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="CODERS"
                android:id="@+id/textView"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/infoAuthorTxT"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="-FranQy"
                android:id="@+id/textView2"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/infoAuthorTxT"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="-Matrix0123456789"
            android:id="@+id/textView12"
            android:textColor="@color/infoAuthorTxT" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="DESIGNERS"
                android:id="@+id/textView3"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/infoAuthorTxT"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="-FranQy"
                android:id="@+id/textView4"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/infoAuthorTxT"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="-Wieczur"
                android:id="@+id/textView5"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/infoAuthorTxT"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="CONTACT"
                android:id="@+id/textView10"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/infoAuthorTxT"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="dev.franqy@gmail.com"
                android:id="@+id/textView11"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/infoAuthorTxT"/>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/closeInfo"
                android:layout_gravity="center_horizontal|top"
                android:background="@drawable/ic_list_remove"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
    </RelativeLayout>

</LinearLayout>