<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:id="@+id/relativeLayout"
                    android:layout_gravity="center_horizontal|top"
                    android:paddingTop="7dp"
                    android:layout_centerHorizontal="true"
        android:background="#555555">

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttondel"
            android:background="@drawable/ic_list_remove"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="36dp" />

        <TabHost
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabHost"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/buttondel"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"></TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="wybierz komputer"
                                android:id="@+id/textView"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="5dp"
                                android:textColor="@color/infoAuthorTxT" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/infoAuthorTxT"
                                android:gravity="center_vertical"
                                android:paddingLeft="50dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="30dp"></RelativeLayout>

                            <ListView
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:id="@+id/PClist"
                                android:layout_gravity="center_vertical"
                                android:choiceMode="singleChoice"
                                android:scrollingCache="false"
                                android:smoothScrollbar="false"
                                android:layout_marginLeft="30dp"
                                android:layout_marginBottom="10dp" />

                        </LinearLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/tab2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/servName"
                            android:layout_below="@+id/textView2"
                            android:layout_alignParentLeft="true"
                            android:imeOptions="actionNext"
                            android:singleLine="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/menu_changePC_write_name"
                            android:id="@+id/textView2"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:textColor="@color/infoAuthorTxT" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/menu_changePC_write_pass"
                            android:id="@+id/textView3"
                            android:layout_below="@+id/servName"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/infoAuthorTxT"
                            android:layout_marginBottom="5dp" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/servPass"
                            android:layout_below="@+id/textView3"
                            android:layout_alignParentLeft="true"
                            android:layout_alignRight="@+id/saveName"
                            android:imeOptions="actionDone"
                            android:inputType="number" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_changePC_write_connect"
                            android:id="@+id/saveName"
                            android:layout_marginTop="31dp"
                            android:layout_below="@+id/servPass"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/tab3"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:measureWithLargestChild="false"
                        android:gravity="center_vertical|center_horizontal">

                        <FrameLayout
                            android:layout_width="290dp"
                            android:layout_height="290dp"
                            android:id="@+id/cameraPreview"
                            android:background="#555555"
                            android:layout_marginBottom="10dp">

                            <ProgressBar
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/progressBar"
                                android:layout_gravity="center" />
                        </FrameLayout>
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>
        </TabHost>


    </RelativeLayout>
</LinearLayout>